Complete to create CV container and add delete features

--- a/login/login.html
+++ b/login/login.html
@@ -28,7 +28,7 @@
 
       <br />
       <br />
-      <span class="success"></span>
+      <span class="error"></span>
     </form>
 
     <!-- axios -->
