Clean duplicate data after to create new CV

--- a/users/user.html
+++ b/users/user.html
@@ -30,12 +30,12 @@
 
     <!-- <div class="newOne"> -->
     <div class="newOne">
-      <h2>Here all you cv</h2>
+      <h2 class="heading">Here all you cv</h2>
       <div class="all-your-CV"></div>
       <!-- cv container -->
     </div>
     <div class="container">
-      <h1>Create your CV</h1>
+      <h2>Create your CV</h2>
 
       <form class="cv-form">
         <input type="text" placeholder="Full name" name="fullName" required />
@@ -43,6 +43,11 @@
         <br />
         <br />
         <input type="email" placeholder="Email" name="email" required />
+        <span class="error"></span>
+        <br />
+        <br />
+
+        <input type="text" placeholder="Location" name="location" required />
         <span class="error"></span>
         <br />
         <br />
@@ -100,7 +105,7 @@
         <input
           type="text"
           placeholder="Hobbies and interests"
-          name="hobbiesAndInterests"
+          name="hobbies"
           required
         />
         <br />
@@ -130,6 +135,7 @@
     ></script> -->
     <!-- javascript -->
     <!-- <script src="app-user.js"></script> -->
-    <script type="module" src="app-new-testing.js"></script>
+    <script type="module" src="app-user.js"></script>
+    <!-- <script type="module" src="app-new-testing.js"></script> -->
   </body>
 </html>
